k8-istio/03-dashboard/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tls-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: k3s-tamtanguy-cert
    hosts:
    - "*.k3s.tamtanguy.fr"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-vservice
spec:
  hosts:
  - "dashboard.k3s.tamtanguy.fr"
  gateways:
  - tls-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
